@startuml Diagrama de classes Botrix Ações

Cliente -- Imovel
Imovel -- TipoImovel
Imovel -- Imagem



GrupoProduto -- Produto

class Usuario{
    Guid Id
    bool Ativo
    string Email
    string Autenticacao    
    DateTime? Dataregistro                
}

class Cliente{
    Guid Id
    Guid ImovelId
    String Nome
    String RazaoSocial
    String CNPJ
    String CPF
    String Rua
    String Numero
    String Complemento
    String Bairro
    String EstadoId
    String CidadeId
    String CidadeNome
    String CEP
    String Fone
    String Email
}
class Imovel {
    Guid Id
    Guid ClienteId
    Guid TipoImovelId
    Guid ImagemId
    String Rua
    String Numero
    String Complemento
    String Bairro
    String CEP
    String Descricao
    String Finalidade
    String Situacao
    Decimal AreaContruida
    Decimal AreaTotal
    Decimal ValorVenda
    Decimal ValorAluguel
    Deciaml Dormitorios
    Deciaml Suite
    Decimal VagasGaragem
}

' class TipoImovel{
'     Guid Id
'     Guid ImovelId
'     String Descricao
' }

' class Imagem{
'     Guid Id
'     Imovel ImovelId
'     String UrlImagem
'     String Descricao
' }

@enduml